--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,22 +1,54 @@
-name: Generate Datas
+# Ação do GitHub para gerar um gráfico de contribuições com uma cobra comendo suas contribuições.
+
+name: Generate Snake
+
+# Controla quando a ação será executada. Esta ação executa a cada 6 horas.
+
 on:
-schedule: # execute every 12 hours
-- cron: "* */12 * * *"
-workflow_dispatch:
+  schedule:
+      # a cada 6 horas
+    - cron: "0 */6 * * *"
+
+# Este comando nos permite executar a Ação automaticamente na aba de Ações.
+  workflow_dispatch:
+
+# A sequência de execuções neste fluxo de trabalho:
 jobs:
-build:
-name: Jobs to update datas
-runs-on: ubuntu-latest
-steps:
-# Snake Animation
-- uses: Platane/snk@master
-id: snake-gif
-with:
-github_user_name: KaneeSell
-svg_out_path: dist/github-contribution-grid-snake.svg
-- uses: crazy-max/ghaction-github-pages@v2.1.3
-with:
-target_branch: output
-build_dir: dist
-env:
-GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+  # Este fluxo de trabalho contém um único trabalho chamado "build"
+  build:
+    # O tipo de runner no qual o trabalho será executado
+    runs-on: ubuntu-latest
+
+    # Steps representam uma sequência de tarefas que serão executadas como parte do trabalho
+    steps:
+
+    # Verifica o repositório sob $GITHUB_WORKSHOP, para que seu trabalho possa acessá-lo
+      - uses: actions/checkout@v2
+
+    # Gera a cobra
+      - uses: Platane/snk@master
+        id: snake-gif
+        with:
+          github_user_name: mishmanners
+          # essas próximas 2 linhas geram os arquivos em um branch chamado "output". Isso evita que o branch principal fique desorganizado.
+          gif_out_path: dist/github-contribution-grid-snake.gif
+          svg_out_path: dist/github-contribution-grid-snake.svg
+
+     # mostra o status da build. Facilita a depuração (se houver algum problema).
+      - run: git status
+
+      # Empurra as mudanças
+      - name: Push changes
+        uses: ad-m/github-push-action@master
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          branch: master
+          force: true
+
+      - uses: crazy-max/ghaction-github-pages@v2.1.3
+        with:
+          # o branch de saída que mencionamos acima
+          target_branch: output
+          build_dir: dist
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
