--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,53 +1,43 @@
-# Ação do GitHub para gerar um gráfico de contribuições com uma cobra comendo suas contribuições.
-
-name: Generate Snake
-
-# Controla quando a ação será executada. Esta ação executa a cada 6 horas.
+name: generate animation
 
 on:
+  # run automatically every 24 hours
   schedule:
-      # a cada 6 horas
-    - cron: "0 */6 * * *"
-
-# Este comando nos permite executar a Ação automaticamente na aba de Ações.
+    - cron: "0 *24 * * *" 
+  
+  # allows to manually run the job at any time
   workflow_dispatch:
+  
+  # run on every push on the master branch
+  push:
+    branches:
+    - master
+    
+  
 
-# A sequência de execuções neste fluxo de trabalho:
 jobs:
-  # Este fluxo de trabalho contém um único trabalho chamado "build"
-  build:
-    # O tipo de runner no qual o trabalho será executado
+  generate:
+    permissions: 
+      contents: write
     runs-on: ubuntu-latest
-
-    # Steps representam uma sequência de tarefas que serão executadas como parte do trabalho
+    timeout-minutes: 5
+    
     steps:
-
-    # Verifica o repositório sob $GITHUB_WORKSHOP, para que seu trabalho possa acessá-lo
-      - uses: actions/checkout@v2
-
-    # Gera a cobra
-      - uses: Platane/snk@master
-        id: snake-gif
+      # generates a snake game from a github user (<github_user_name>) contributions graph, output a svg animation at <svg_out_path>
+      - name: generate github-contribution-grid-snake.svg
+        uses: Platane/snk/svg-only@v3
         with:
-          github_user_name: KaneeSell
-          # essas próximas 2 linhas geram os arquivos em um branch chamado "output". Isso evita que o branch principal fique desorganizado.
-          gif_out_path: dist/github-contribution-grid-snake.gif
-          svg_out_path: dist/github-contribution-grid-snake.svg
-
-     # mostra o status da build. Facilita a depuração (se houver algum problema).
-      - run: git status
-
-      # Empurra as mudanças
-      - name: Push changes
-        uses: ad-m/github-push-action@master
+          github_user_name: ${{ github.repository_owner }}
+          outputs: |
+            dist/github-contribution-grid-snake.svg
+            dist/github-contribution-grid-snake-dark.svg?palette=github-dark
+          
+          
+      # push the content of <build_dir> to a branch
+      # the content will be available at https://raw.githubusercontent.com/<github_user>/<repository>/<target_branch>/<file> , or as github page
+      - name: push github-contribution-grid-snake.svg to the output branch
+        uses: crazy-max/ghaction-github-pages@v3.1.0
         with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          branch: master
-          force: true
-
-      - uses: crazy-max/ghaction-github-pages@v2.1.3
-        with:
-          # o branch de saída que mencionamos acima
           target_branch: output
           build_dir: dist
         env:
